# lscpp_dep

./: .gitignore  CMakeLists.txt  README.md  adep.cpp  cdep.c  cdep.cpp  idep_adep.c  idep_adep.cpp  idep_aliasdep.h  idep_aliastable.h  idep_aliasutil.h  idep_altab.c  idep_altab.cpp  idep_alutil.cpp  idep_binrel.cpp  idep_binrel.h  idep_cdep.cpp  idep_compiledep.h  idep_fdepitr.cpp  idep_filedepiter.h  idep_ldep.cpp  idep_linkdep.h  idep_namea.cpp  idep_namearray.h  idep_nameindexmap.h  idep_nimap.c  idep_nimap.cpp  idep_tokeniter.h  idep_tokitr.cpp  ldep.cpp
test/: aliases  searchpath
